--- a/sinhnhat.html
+++ b/sinhnhat.html
@@ -80,7 +80,7 @@
 <canvas id="fireworks"></canvas>
 <div class="button-container">
   <button class="btn" onclick="location.href='login.html'">Hãy nhấn vào đây</button>
-  <button class="btn back-btn" onclick="location.href='bánh kem.html'">Quay Lại</button>
+  <button class="btn back-btn" onclick="location.href='index.html'">Quay Lại</button>
 </div>
 
 <script>
