--- a/login.html
+++ b/login.html
@@ -45,6 +45,26 @@
             font-size: 16px;
         }
 
+        .password-wrapper {
+            position: relative;
+            width: 100%;
+        }
+
+        #toggle-password {
+            position: absolute;
+            top: 50%;
+            right: 12px;
+            transform: translateY(-50%);
+            cursor: pointer;
+            font-size: 20px;
+            color: #888;
+            transition: color 0.3s;
+        }
+
+        #toggle-password:hover {
+            color: #ff4d79;
+        }
+
         button {
             background-color: #ff4d79;
             color: white;
@@ -55,6 +75,7 @@
 
         button:hover {
             background-color: #ff3366;
+            transform: scale(1.05);
         }
 
         @keyframes fadeIn {
@@ -92,7 +113,13 @@
 <div class="container" id="login-form">
     <h1>Đăng Nhập</h1>
     <input type="text" id="username" placeholder="Tài khoản" />
-    <input type="password" id="password" placeholder="Mật khẩu" />
+    
+    <!-- Bọc mật khẩu trong phần tử div -->
+    <div class="password-wrapper">
+        <input type="password" id="password" placeholder="Mật khẩu" />
+        <span id="toggle-password">👁️</span>
+    </div>
+
     <button onclick="login()">Đăng Nhập</button>
     <button class="btn back-btn" onclick="location.href='sinhnhat.html'">Quay Lại</button>
 </div>
@@ -105,6 +132,20 @@
 </div>
 
 <script>
+    // ===== Hiển thị/Ẩn mật khẩu =====
+    const passwordInput = document.getElementById('password');
+    const togglePassword = document.getElementById('toggle-password');
+
+    togglePassword.addEventListener('click', () => {
+        if (passwordInput.type === 'password') {
+            passwordInput.type = 'text';
+            togglePassword.innerHTML = '🙈'; // Khi hiển thị mật khẩu
+        } else {
+            passwordInput.type = 'password';
+            togglePassword.innerHTML = '👁️'; // Khi ẩn mật khẩu
+        }
+    });
+
     // Mảng chứa các icon muốn hiển thị
     const icons = ['🍩', '🍬', '🎁', '🍫', '🎂', '🍪', '🍭', '🍎', '🍒', '🍍'];
 
@@ -113,26 +154,16 @@
         const icon = document.createElement('div');
         icon.classList.add('flower');
         icon.innerHTML = icons[Math.floor(Math.random() * icons.length)];
-
-        // Đặt vị trí rơi từ giữa và lan ra hai bên
-        const centerX = window.innerWidth / 2;
-        const offset = (Math.random() - 0.5) * window.innerWidth * 0.8;
-        icon.style.left = `${centerX + offset}px`;
-
-        // Thời gian và độ trễ rơi khác nhau để tạo hiệu ứng tự nhiên
+        icon.style.left = `${Math.random() * window.innerWidth}px`;
         icon.style.animationDuration = (Math.random() * 3 + 2) + 's';
         icon.style.animationDelay = Math.random() * 2 + 's';
 
         document.body.appendChild(icon);
 
-        // Xoá icon sau khi rơi xong để tránh lag
-        icon.addEventListener('animationend', () => {
-            icon.remove();
-        });
+        setTimeout(() => icon.remove(), (parseFloat(icon.style.animationDuration) + parseFloat(icon.style.animationDelay)) * 1000);
     }
 
-    // Tạo hiệu ứng rơi cho icon mỗi 200ms
-    setInterval(createFallingIcons, 200);
+    setInterval(createFallingIcons, 400);
 
     // Xử lý đăng nhập
     function login() {
@@ -160,21 +191,14 @@
             const heart = document.createElement('div');
             heart.classList.add('heart');
             heart.innerHTML = '❤️';
-
-            // Đặt vị trí rơi từ giữa và lan ra hai bên
             heart.style.left = Math.random() * window.innerWidth + 'px';
-
-            // Thời gian và độ trễ rơi khác nhau
             heart.style.animationDuration = (Math.random() * 3 + 2) + 's';
             heart.style.animationDelay = Math.random() * 2 + 's';
 
             document.body.appendChild(heart);
 
-            // Xoá icon sau khi rơi xong để tránh lag
-            heart.addEventListener('animationend', () => {
-                heart.remove();
-            });
-        }, 200);
+            setTimeout(() => heart.remove(), (parseFloat(heart.style.animationDuration) + parseFloat(heart.style.animationDelay)) * 1000);
+        }, 400);
     }
 </script>
 
