--- a/login.html
+++ b/login.html
@@ -170,7 +170,7 @@
         const username = document.getElementById('username').value;
         const password = document.getElementById('password').value;
 
-        if (username === '1' && password === '1') {
+        if (username === '23/3' && password === 'Phạm Thị Thùy LinhLinh') {
             document.getElementById('login-form').classList.add('hidden');
             document.getElementById('celebration-page').classList.remove('hidden');
             createHearts();
