--- a/login.html
+++ b/login.html
@@ -127,7 +127,7 @@
 <!-- Trang Chúc Mừng -->
 <div class="container hidden" id="celebration-page">
     <h1>Chúc Mừng Sinh Nhật ❤️</h1>
-    <p>Chúc em luôn xinh đẹp, hạnh phúc và cười thật nhiều! 🌸</p>
+    <p>Chúc bạn có một ngày sinh nhật thật ý nghĩa và tràn đầy niềm vui! 🥳 Mong rằng mọi ước mơ của bạn sẽ sớm trở thành hiện thực, và mỗi ngày mới đều mang đến cho bạn thật nhiều hạnh phúc, sức khỏe và thành công. 🎂🎈 Chúc em luôn xinh đẹp, hạnh phúc và cười thật nhiều! 🌸</p>
     <button onclick="goBack()">Quay lại</button>
 </div>
 
