--- a/login.html
+++ b/login.html
@@ -170,7 +170,7 @@
         const username = document.getElementById('username').value;
         const password = document.getElementById('password').value;
 
-        if (username === '24/3' && password === 'Trần Phương NguyênNguyên') {
+        if (username === '24/3' && password === 'Trần Phương Nguyên') {
             document.getElementById('login-form').classList.add('hidden');
             document.getElementById('celebration-page').classList.remove('hidden');
             createHearts();
